--- a/live.html
+++ b/live.html
@@ -486,21 +486,7 @@
             <span id="weighInfo" class="form__hint" style="margin-left:auto;">перегляд зважування</span>
           </div>
 
-          <div class="table-wrap">
-            <table class="table table-sm" id="totalTable">
-              <thead>
-                <tr>
-                  <th>Зона</th>
-                  <th>Команда</th>
-                  <th>🐟</th>
-                  <th>🐟</th>
-                  <th>🐟</th>
-                  <th>🐟</th>
-                </tr>
-              </thead>
-              <tbody></tbody>
-            </table>
-          </div>
+          <div id="totalTable"></div>
 
         </div>
       </div>
