--- a/live.html
+++ b/live.html
@@ -478,15 +478,17 @@
         <div class="card">
           <h2 style="margin-top:0;">Таблиця зважувань</h2>
 
-          <div class="bf-toggle" style="margin-top:18px;margin-bottom:12px">
-            <button class="btn btn--accent" id="wBtn1" type="button">W1</button>
-            <button class="btn btn--ghost"  id="wBtn2" type="button">W2</button>
-            <button class="btn btn--ghost"  id="wBtn3" type="button">W3</button>
-            <button class="btn btn--ghost"  id="wBtn4" type="button">W4</button>
-            <span id="weighInfo" class="form__hint" style="margin-left:auto;">перегляд зважування</span>
-          </div>
+<div class="bf-toggle" style="margin-top:18px;margin-bottom:12px">
+  <button class="btn btn--accent" id="wBtn1" type="button">W1</button>
+  <button class="btn btn--ghost"  id="wBtn2" type="button">W2</button>
+  <button class="btn btn--ghost"  id="wBtn3" type="button">W3</button>
+  <button class="btn btn--ghost"  id="wBtn4" type="button">W4</button>
+  <span id="weighInfo" class="form__hint" style="margin-left:auto;">
+    перегляд зважування
+  </span>
+</div>
 
-          <div id="totalTable"></div>
+<div id="totalTable"></div>
 
         </div>
       </div>
