--- a/live.html
+++ b/live.html
@@ -421,6 +421,80 @@
   white-space: nowrap !important;
   font-variant-numeric: tabular-nums;
 }
+    /* =====================================
+   ZONES A / B / C — CONTROL GRID
+   ===================================== */
+
+/* БАЗА: центр + цифри рівні */
+.live-zone th,
+.live-zone td{
+  text-align: center !important;
+  font-variant-numeric: tabular-nums;
+}
+
+/* 1️⃣ ЗОНА (A7) */
+.live-zone th:nth-child(1),
+.live-zone td:nth-child(1){
+  width: 42px;
+  font-size: 11px;
+  font-weight: 600;
+}
+
+/* 2️⃣ КОМАНДА */
+.live-zone th:nth-child(2),
+.live-zone td:nth-child(2){
+  width: 110px;
+  text-align: left !important;
+  font-size: 11px;
+  font-weight: 600;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+/* 3️⃣–6️⃣ W1–W4 */
+.live-zone th:nth-child(3),
+.live-zone td:nth-child(3),
+.live-zone th:nth-child(4),
+.live-zone td:nth-child(4),
+.live-zone th:nth-child(5),
+.live-zone td:nth-child(5),
+.live-zone th:nth-child(6),
+.live-zone td:nth-child(6){
+  width: 78px;
+  font-size: 11px;
+}
+
+/* 7️⃣ РАЗОМ */
+.live-zone th:nth-child(7),
+.live-zone td:nth-child(7){
+  width: 56px;
+  font-size: 11px;
+  font-weight: 700;
+}
+
+/* 8️⃣ BIG */
+.live-zone th:nth-child(8),
+.live-zone td:nth-child(8){
+  width: 56px;
+  font-size: 11px;
+}
+
+/* 9️⃣ ВАГА */
+.live-zone th:nth-child(9),
+.live-zone td:nth-child(9){
+  width: 72px;
+  font-size: 11px;
+  font-weight: 700;
+}
+
+/* 🔟 МІСЦЕ */
+.live-zone th:nth-child(10),
+.live-zone td:nth-child(10){
+  width: 46px;
+  font-size: 11px;
+  font-weight: 800;
+}
     
   </style>
 </head>
