--- a/live.html
+++ b/live.html
@@ -83,24 +83,26 @@
     }
   }
 
-  /* ===== Таблиці (базово, як було) ===== */
-  .table-sm{
-    font-size:11.5px;
-    line-height:1.25;
-  }
-  .table-sm th,
-  .table-sm td{
-    padding:4px 6px;
-    white-space:nowrap;
-  }
-  .table-sm td.team-col{
-    max-width:180px;
-    white-space:normal;
-  }
-
+  /* ===== Таблиці (база) ===== */
   .table-wrap{
     overflow-x:auto;
     max-width:100%;
+    -webkit-overflow-scrolling:touch;
+  }
+
+  .table-sm{
+    font-size:7px;            /* ✅ як ти хочеш */
+    line-height:1.05;
+  }
+  .table-sm th,
+  .table-sm td{
+    padding:2px 2px;
+    white-space:nowrap;
+    text-align:center;         /* ✅ центр */
+    vertical-align:middle;     /* ✅ центр */
+    overflow:hidden;
+    text-overflow:clip;
+    font-variant-numeric: tabular-nums;
   }
 
   .live-note{
@@ -113,7 +115,7 @@
   .live-zones-grid{
     display:grid;
     grid-template-columns:repeat(3,1fr);
-    gap:12px;
+    gap:0;                     /* ✅ як було "впритул" */
   }
   @media (max-width:980px){
     .live-zones-grid{
@@ -122,381 +124,172 @@
   }
 
   .live-zone.card{
-    padding:10px 10px 8px;
+    padding:6px 6px 4px;
+    margin:0;
+    border-radius:5px;
   }
   .live-zone-title{
     display:flex;
     align-items:center;
     justify-content:space-between;
-    margin-bottom:6px;
+    margin:4px 0;
   }
   .live-zone-title .badge{
     font-size:11px;
     padding:3px 8px;
   }
 
-  /* --- компактні таблиці саме для зон --- */
-  .live-zone .table-sm{
-    font-size:11px;
-  }
-  .live-zone .table-sm th,
-  .live-zone .table-sm td{
-    padding:3px 4px;
-  }
-
-  /* Зона (A4, B5...) вузька */
-  .live-zone .table-sm th:nth-child(1),
-  .live-zone .table-sm td:nth-child(1){
-    width:38px;
-    text-align:center;
-  }
-
-  /* Команда */
-  .live-zone .table-sm th:nth-child(2),
-  .live-zone .table-sm td:nth-child(2){
-    max-width:110px;
-  }
-
-  /* всі числа по центру */
-  .live-zone .table-sm td:nth-child(n+3){
-    text-align:center;
-  }
-
-  /* ============================
-     BigFish Total – компактна версія
-     ============================ */
-  .bf-wrap{
-    margin-top: 12px;
-    padding: 14px 16px;
-    border-radius: 14px;
-  }
-
-  .bf-wrap h2{
-    font-size: 20px;
-    font-weight: 600;
-    line-height: 1.25;
-    margin: 0;
-  }
-
-  .bf-wrap .pill{
-    display: inline-flex;
-    align-items: center;
-    gap: 6px;
-    padding: 5px 9px;
-    border-radius: 999px;
-    border: 1px solid rgba(148,163,184,.25);
-    background: rgba(2,6,23,.35);
-    color: #cbd5e1;
-    font-size: 11px;
-    white-space: nowrap;
-  }
-
-  .bf-wrap .table-sm{
-    font-size: 11px;
-    line-height: 1.2;
-  }
-
-  .bf-wrap .table-sm th,
-  .bf-wrap .table-sm td{
-    padding: 3px 5px;
-    white-space: nowrap;
-  }
-
-  .bf-wrap .table-sm th:nth-child(1),
-  .bf-wrap .table-sm td:nth-child(1){
-    max-width: 130px;
-    white-space: normal;
-  }
-
-  .bf-wrap .table-sm th:nth-child(n+2),
-  .bf-wrap .table-sm td:nth-child(n+2){
-    text-align: center;
-  }
-
-  .bigfish-row--max{
-    background: rgba(250,204,21,0.08);
-  }
-
-  /* FIX: ховання/показ BigFish (бо ти перемикаєш класом is-open) */
-  #bigFishWrap{ display:none; }
-  #bigFishWrap.is-open{ display:block; }
-
-  /* ===== LIVE: FIX "вилазить вправо" (портрет) ===== */
-  .live-page .table-wrap{
+  /* ✅ важливо: fixed layout + чіткі ширини */
+  .live-zone table.table{
     width:100%;
-    max-width:100%;
-    overflow-x:auto;
-    -webkit-overflow-scrolling:touch;
+    table-layout:fixed;
+    border-collapse:collapse;
   }
 
-  /* ключ: таблиця 100% і fixed */
-  .live-page table.table{
-    width:100% !important;
-    table-layout:fixed !important;
-  }
-
-  /* авто-зменшення шрифтів */
-  .live-page .table-sm{
-    font-size: clamp(9px, 2.6vw, 11.5px);
-    line-height:1.15;
-  }
-  .live-page .table-sm th,
-  .live-page .table-sm td{
-    padding: clamp(3px, 1.1vw, 6px);
-    white-space: nowrap;
-    overflow:hidden;
-    text-overflow: ellipsis;
-  }
-
-  /* назва команди може переноситись */
-  .live-page .table-sm th:nth-child(2),
-  .live-page .table-sm td:nth-child(2){
-    white-space: normal;
-  }
-
-  /* === ZONES: щоб вага/цифри не зникали === */
-  .live-zone table{
-    width:100% !important;
-    table-layout: fixed !important;
-  }
+  /* ✅ БАЗА ДЛЯ ЗОН */
   .live-zone th,
   .live-zone td{
-    padding: 3px 4px !important;
-    font-size: clamp(9px, 2.55vw, 11px) !important;
-    line-height: 1.15 !important;
-  }
-  .live-zone th:nth-child(1),
-  .live-zone td:nth-child(1){ width: 40px !important; text-align:center !important; }
-  .live-zone th:nth-child(2),
-  .live-zone td:nth-child(2){ width: 92px !important; white-space: normal !important; overflow: hidden !important; }
-  .live-zone th:nth-child(9),
-  .live-zone td:nth-child(9){
-    width: 60px !important;
+    font-size:7px !important;
+    line-height:1.05 !important;
+    padding:2px !important;
     text-align:center !important;
-    white-space: nowrap !important;
-    overflow: visible !important;
-    text-overflow: clip !important;
+    vertical-align:middle !important;
+    white-space:nowrap !important;
+    overflow:hidden !important;
+    text-overflow:clip !important;
     font-variant-numeric: tabular-nums;
   }
 
-  /* менше рамок */
-  @media (max-width: 980px){
-    .container{ width: min(1100px, 96%) !important; }
+  /* 1) ЗОНА — 27 */
+  .live-zone th:nth-child(1),
+  .live-zone td:nth-child(1){
+    width:27px !important;
   }
-  .card{ padding: 14px !important; border-color: rgba(255,255,255,.08) !important; }
-  .live-zone.card{ padding: 10px !important; border-color: rgba(255,255,255,.06) !important; }
-  .table th, .table td{ border-color: rgba(255,255,255,.08) !important; }
-  .table th{ background: rgba(255,255,255,.04) !important; }
-  .table tr:nth-child(even){ background: rgba(255,255,255,.02) !important; }
-  
-/* ===============================
-   LIVE — РАМКА ЗОНИ ВПРИТУЛ
-   =============================== */
 
-/* Велика рамка (Зони A / B / C) */
-.live-left > .card{
-  padding: 3px !important;
-}
+  /* 2) КОМАНДА — 45 */
+  .live-zone th:nth-child(2),
+  .live-zone td:nth-child(2){
+    width:45px !important;
+    text-align:left !important;
+    padding-left:3px !important;
+    text-overflow:ellipsis !important;
+  }
 
-/* СІТКА ЗОН — БЕЗ ВІДСТУПІВ */
-.live-zones-grid{
-  gap: 0 !important;
-}
+  /* 3-6) W1..W4 — 40 */
+  .live-zone th:nth-child(3),
+  .live-zone td:nth-child(3),
+  .live-zone th:nth-child(4),
+  .live-zone td:nth-child(4),
+  .live-zone th:nth-child(5),
+  .live-zone td:nth-child(5),
+  .live-zone th:nth-child(6),
+  .live-zone td:nth-child(6){
+    width:40px !important;
+  }
 
-/* РАМКА ЗОНИ — ВПРИТУЛ */
-.live-zone.card{
-  margin: 0 !important;
-  border-radius: 5px !important;
-}
+  /* 7) К-ТЬ — 20 */
+  .live-zone th:nth-child(7),
+  .live-zone td:nth-child(7){
+    width:20px !important;
+    font-weight:700 !important;
+  }
 
-/* Заголовок зони */
-.live-zone-title{
-  margin: 4px 0 !important;
-}
+  /* 8) BIG — 25 */
+  .live-zone th:nth-child(8),
+  .live-zone td:nth-child(8){
+    width:25px !important;
+  }
 
-/* Таблиця всередині — без зайвих відступів */
-.live-zone .table-wrap{
-  margin: 0 !important;
-  padding: 0 !important;
-}
+  /* 9) ВАГА — 30 */
+  .live-zone th:nth-child(9),
+  .live-zone td:nth-child(9){
+    width:30px !important;
+    font-weight:700 !important;
+  }
 
-/* 🔻 АВТОЗМЕНШЕННЯ ШРИФТУ */
-.live-zone th,
-.live-zone td{
-  font-size: clamp(9px, 2.4vw, 11px) !important;
-  line-height: 1.15;
-}
+  /* 10) МІСЦЕ — 20 */
+  .live-zone th:nth-child(10),
+  .live-zone td:nth-child(10){
+    width:20px !important;
+    font-weight:800 !important;
+  }
 
-/* =======================================================
-   ✅ ПРАВКИ ТІЛЬКИ ПО ТВОЄМУ ЗАПИТУ (БЕЗ ІНШИХ ЗМІН)
-   1) Велика рамка зон — radius 5
-   2) В зоні: стискаємо "Команда" і даємо місце під "4/24.79"
-   3) Велика рамка таблиці зважувань — radius 5
-   ======================================================= */
+  /* ===== LIVE: рамки лівих карточок як ти робив ===== */
+  .live-left > .card{
+    padding:3px !important;
+  }
+  .live-left > .card:first-child{
+    border-radius:5px !important;
+  }
+  .live-left > .card:nth-child(2){
+    border-radius:5px !important;
+  }
 
-/* 1) тільки ПЕРША велика рамка (та що "Зони A/B/C") */
-.live-left > .card:first-child{
-  border-radius: 5px !important;
-}
+  /* ===================================================
+     ✅ ТАБЛИЦЯ ЗВАЖУВАНЬ (W1–W4)
+     - бігунок
+     - sticky зона+команда
+     - клітинка ваги = 20
+     =================================================== */
 
-/* 3) ДРУГА велика рамка (та що "Таблиця зважувань") */
-.live-left > .card:nth-child(2){
-  border-radius: 5px !important;
-}
+  /* wrapper scroll */
+  .live-left .table-wrap{
+    overflow-x:auto;
+    max-width:100%;
+    -webkit-overflow-scrolling:touch;
+  }
 
-/* 2) ЗОНИ: "Команда" (заголовок+клітинки) — вузько, без переносу */
-.live-zone th:nth-child(2),
-.live-zone td:nth-child(2){
-  width: 50px !important;          /* було 92 */
-  max-width: 50px !important;
-  white-space: nowrap !important;  /* без переносу */
-  overflow: hidden !important;
-  text-overflow: ellipsis !important;
-  padding-left: 2px !important;
-  padding-right: 2px !important;
-}
+  /* робимо таблицю ширшою ніж екран -> з’явиться бігунок */
+  #totalTable{
+    width:max-content;
+    table-layout:fixed;
+    border-collapse:collapse;
+  }
 
-/* ЗОНИ: "Зона" — трохи компактніше */
-.live-zone th:nth-child(1),
-.live-zone td:nth-child(1){
-  width: 36px !important;
-  padding-left: 2px !important;
-  padding-right: 2px !important;
-}
+  #totalTable th,
+  #totalTable td{
+    font-size:7px !important;
+    line-height:1.05 !important;
+    padding:2px !important;
+    text-align:center !important;
+    vertical-align:middle !important;
+    white-space:nowrap !important;
+    overflow:hidden !important;
+    text-overflow:clip !important;
+    font-variant-numeric: tabular-nums;
+    background:rgba(2,6,23,.35);
+  }
 
-/* ЗОНИ: W1 має вміщати "4/24.79" */
-.live-zone th:nth-child(3),
-.live-zone td:nth-child(3){
-  width: 64px !important;
-  white-space: nowrap !important;
-  overflow: hidden !important;
-  text-overflow: clip !important;  /* НЕ "...", щоб цифри не різало */
-  font-variant-numeric: tabular-nums;
-}
+  /* sticky ЗОНА */
+  #totalTable th:nth-child(1),
+  #totalTable td:nth-child(1){
+    width:27px !important;
+    position:sticky;
+    left:0;
+    z-index:5;
+    background:#0d0d14 !important;
+  }
 
-/* (не обов'язково, але стабільно): W2-W4 такі самі по ширині */
-.live-zone th:nth-child(4),
-.live-zone td:nth-child(4),
-.live-zone th:nth-child(5),
-.live-zone td:nth-child(5),
-.live-zone th:nth-child(6),
-.live-zone td:nth-child(6){
-  width: 48px !important;
-  white-space: nowrap !important;
-  overflow: hidden !important;
-  text-overflow: clip !important;
-  font-variant-numeric: tabular-nums;
-}
-    /* FIX: ідеальне центрування W + значень */
-#totalTable th:nth-child(n+3),
-#totalTable td:nth-child(n+3){
-  text-align:center !important;
-  vertical-align:middle !important;
-  font-variant-numeric: tabular-nums; /* цифри однакової ширини */
-}
+  /* sticky КОМАНДА */
+  #totalTable th:nth-child(2),
+  #totalTable td:nth-child(2){
+    width:45px !important;
+    position:sticky;
+    left:27px;
+    z-index:5;
+    background:#0d0d14 !important;
+    text-align:left !important;
+    padding-left:3px !important;
+    text-overflow:ellipsis !important;
+  }
 
-/* FIX: трохи більше “повітря”, щоб 9 не липла до лінії */
-#totalTable th,
-#totalTable td{
-  padding: 4px 8px !important; /* було 4px 6px */
-}
-    /* =====================================
-   FIX ЗОН A / B / C — W1–W4
-   ===================================== */
-
-/* всі колонки з результатами */
-.live-zone th:nth-child(3),
-.live-zone td:nth-child(3),
-.live-zone th:nth-child(4),
-.live-zone td:nth-child(4),
-.live-zone th:nth-child(5),
-.live-zone td:nth-child(5),
-.live-zone th:nth-child(6),
-.live-zone td:nth-child(6){
-  width: 72px !important;      /* ✔ достатньо для 20/108.9 */
-  min-width: 72px !important;
-  text-align: center !important;
-  padding-left: 6px !important;
-  padding-right: 6px !important;
-  white-space: nowrap !important;
-  font-variant-numeric: tabular-nums;
-}
-    /* =====================================
-   ZONES A / B / C — CONTROL GRID
-   ===================================== */
-
-/* БАЗА: центр + цифри рівні */
-.live-zone th,
-.live-zone td{
-  text-align: center !important;
-  font-variant-numeric: tabular-nums;
-}
-
-/* 1️⃣ ЗОНА (A7) */
-.live-zone th:nth-child(1),
-.live-zone td:nth-child(1){
-  width: 27px;
-  font-size: 7px;
-  font-weight: 600;
-}
-
-/* 2️⃣ КОМАНДА */
-.live-zone th:nth-child(2),
-.live-zone td:nth-child(2){
-  width: 50px;
-  text-align: left !important;
-  font-size: 7px;
-  font-weight: 600;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-/* 3️⃣–6️⃣ W1–W4 */
-.live-zone th:nth-child(3),
-.live-zone td:nth-child(3),
-.live-zone th:nth-child(4),
-.live-zone td:nth-child(4),
-.live-zone th:nth-child(5),
-.live-zone td:nth-child(5),
-.live-zone th:nth-child(6),
-.live-zone td:nth-child(6){
-  width: 40px;
-  font-size: 7px;
-}
-
-/* 7️⃣ РАЗОМ */
-.live-zone th:nth-child(7),
-.live-zone td:nth-child(7){
-  width: 28px;
-  font-size: 7px;
-  font-weight: 700;
-}
-
-/* 8️⃣ BIG */
-.live-zone th:nth-child(8),
-.live-zone td:nth-child(8){
-  width: 20px;
-  font-size: 7px;
-}
-
-/* 9️⃣ ВАГА */
-.live-zone th:nth-child(9),
-.live-zone td:nth-child(9){
-  width: 28px;
-  font-size: 7px;
-  font-weight: 700;
-}
-
-/* 🔟 МІСЦЕ */
-.live-zone th:nth-child(10),
-.live-zone td:nth-child(10){
-  width: 20px;
-  font-size: 7px;
-  font-weight: 800;
-}
-    
-  </style>
+  /* всі ваги — по 20 */
+  #totalTable th:nth-child(n+3),
+  #totalTable td:nth-child(n+3){
+    width:20px !important;
+    min-width:20px !important;
+  }
+</style>
 </head>
 
 <body class="live-page">
