--- a/live.html
+++ b/live.html
@@ -450,20 +450,20 @@
             <span id="weighInfo" class="form__hint" style="margin-left:auto;">перегляд зважування</span>
           </div>
 
-          <div class="table-wrap">
-            <table class="table table-sm" id="totalTable">
-              <thead>
-                <tr>
-                  <th>Зона</th>
-                  <th>Команда</th>
-                  <th>🐟</th>
-                  <th>🐟</th>
-                  <th>🐟</th>
-                  <th>🐟</th>
-                </tr>
-              </thead>
-              <tbody></tbody>
-            </table>
+          <div class="table-wrap weigh-scroll">
+  <table class="table table-sm" id="totalTable">
+    <thead>
+      <tr>
+        <th>Зона</th>
+        <th>Команда</th>
+        <th>🐟</th>
+        <th>🐟</th>
+        <th>🐟</th>
+        <th>🐟</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
           </div>
 
         </div>
